# raglint

./: .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CHEAT_SHEET.md  CODE_FIXES_CHECKLIST.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  COMMUNITY.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  FINAL_EVALUATION.md  GITHUB_SETUP_GUIDE.md  INSTALLATION_AND_DEMO.md  LICENSE  MANIFEST.in  PROJECT_EVALUATION.md  PYPI_PUBLISHING_GUIDE.md  QUICKSTART_SWEDISH.md  QUICK_START.md  README.md  SECURITY.md  SNABBSTART.md  TEST_VERIFICATION_GUIDE.md  action.yml  alembic.ini  build_docs.sh  debug_playground.py  demo.sh  demo_data.json  demo_quick.py  demo_traffic.py  dev.sh  docker-compose.yml  pyproject.toml  pytest.ini  raglint.yml  railway.json  (+6 more)
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  plugin_submission.md
.github/workflows/: benchmark.yml  ci.yml  docker.yml  raglint.yml  release.yml
docs/: ARCHITECTURE.md  COMPARISON.md  PRODUCTION_DEPLOYMENT.md  TROUBLESHOOTING.md  TYPE_HINTS_COMPLETION.md  conf.py  index.md  quickstart.md  requirements.txt
docs/api/: core.md  tracking.md
docs/cookbooks/: chroma_integration.md  haystack_advanced.md  llamaindex_advanced.md  pinecone_integration.md  qdrant_langchain.md  raglint_ollama_qdrant.md  weaviate_integration.md
docs/guides/: configuration.md  integrations.md  plugins.md
docs/landing/: index.html  license.html
docs/tutorials/: VIDEO_SCRIPT.md  optimizing_chunks.md
examples/: cost_tracking.py  langchain_integration.py  performance_demo.py  report_basic.html  report_smart.html  results_export.json  sample_data.json
examples/ecommerce/: README.md  product_qa.json
examples/legal/: README.md  contract_qa.json
examples/plugins/: README.md  answer_completeness.py  latency_tracker.py
examples/support/: README.md  support_qa.json
landing/: coming_soon.html  index.html  pricing.html
raglint/: __init__.py  alerting.py  cache.py  cli.py  cli_enhanced.py  cli_precision.py  confidence.py  config.py  core.py  exceptions.py  experiment.py  fact_extraction.py  instrumentation.py  llm.py  logging.py  marketplace.py  precision_mode.py  tracking.py  webhooks.py
raglint/benchmarks/: __init__.py  coqa.py  hotpotqa.py  registry.py  squad.py
raglint/dashboard/: __init__.py  analytics.py  app.py  auth.py  batch.py  database.py  models.py  oauth.py  pdf_export.py  realtime.py  schemas.py
raglint/generation/: __init__.py  generator.py  prompts.py
raglint/integrations/: __init__.py  azure.py  bedrock.py  haystack.py  langchain.py  llamaindex.py  openai.py
raglint/metrics/: __init__.py  bias.py  chunking.py  conciseness.py  context_metrics.py  enhanced_faithfulness.py  faithfulness.py  relevance.py  retrieval.py  semantic.py  tone.py  toxicity.py
raglint/payments/: stripe_integration.py
raglint/plugins/: __init__.py  interface.py  loader.py  sandbox.py
raglint/reporting/: __init__.py  html_generator.py
raglint/security/: __init__.py  signing.py
scripts/: benchmark.py  deploy_staging.sh  pre_publish_check.sh  release.sh  run_benchmarks.py  security_audit.sh  verify_all.sh
security/: FIXES_APPLIED.md
tests/: conftest.py  test_async.py  test_benchmarks.py  test_builtin_plugins.py  test_builtin_plugins_coverage.py  test_chunking.py  test_cli.py  test_cli_coverage.py  test_cli_coverage_full.py  test_cli_extended.py  test_cli_final.py  test_config.py  test_context_metrics.py  test_core.py  test_core_coverage.py  test_core_extended.py  test_dashboard.py  test_dashboard_coverage.py  test_error_handling.py  test_exceptions.py  test_experiment.py  test_generation.py  test_html_generation.py  test_instrumentation.py  test_instrumentation_coverage.py  test_integration.py  test_integrations_comprehensive.py  test_integrations_llamaindex.py  test_llm.py  test_llm_coverage.py  test_llm_extended.py  test_llm_providers.py  test_logging.py  test_metrics.py  test_metrics_advanced.py  test_new_plugins.py  test_plugin_integration.py  test_plugins.py  test_plugins_simple.py  test_relevance.py  (+7 more)
verification_reports/: dependency_report.txt  security_report.txt  test_report.txt
(+158 files in other folders)
