[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raglint"
version = "0.1.1"
description = "Production-ready RAG pipeline evaluation and observability platform"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "RAGlint Team", email = "maintainers@raglint.dev"}
]
keywords = ["rag", "llm", "evaluation", "observability", "monitoring", "langchain", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]


dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "requests>=2.31.0",
    "tqdm>=4.65.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "pip>=25.3",  # Security: Fix GHSA-4xh5-x5gv-qwph (path traversal)
    "pyyaml>=6.0",
    "rich>=10.0.0",
    "aiohttp>=3.8.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "python-multipart>=0.0.6",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "scikit-learn",
    "sentence-transformers",
    "numpy",
]

[project.urls]
"Homepage" = "https://github.com/raglint/raglint"
"Bug Tracker" = "https://github.com/raglint/raglint/issues"
Repository = "https://github.com/raglint/raglint"
Changelog = "https://github.com/raglint/raglint/blob/main/CHANGELOG.md"

[project.entry-points."raglint.plugins"]
# Example: my_plugin = "my_package.plugin:MyPluginClass"

[project.scripts]
raglint = "raglint.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
    "pre-commit>=3.3.3",
    "pip-audit>=2.6.0",
    "bandit[toml]>=1.7.5",
    "psutil>=5.9.0",  # For benchmarking
]
integrations = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "llama-index>=0.9.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
]
all = [
    "raglint[dev,integrations,docs]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["raglint*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--cov=raglint",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]

[tool.coverage.run]
source = ["raglint"]
omit = ["*/tests/*", "*/venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "sklearn.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "B904",  # raise from
    "E722",  # bare except
    "E402",  # import position
    "UP034", # extraneous parentheses
    "F401",  # unused import (when checking availability)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'
